# UserLixo

./: .dockerignore  .env_base  .gitignore  .pre-commit-config.yaml  Dockerfile  GenerateStringSession.py  LICENSE  Procfile  README.md  app.json  backups.py  bot.py  compose.yml  config.env_example  config.ini  config.ini.example  config.py  config.py.example  config.py.exemple  convert.py  crowdin.yml  database.py  db.json  db.py  hello.py  heroku.yml  locales.py  login.py  pyproject.toml  pyrogram_mod.py  readme.md  reload.py  requirements-heroku.txt  requirements-sqlite.txt  requirements.txt  setup.py  utils.py  version.py
.devcontainer/: devcontainer.json  docker-compose.yml
.docker/: entrypoint.sh
.github/workflows/: codeql.yml
bot_handlers/callback_query/: add_plugin.py  any.py  commands.py  help.py  plugins.py  restart.py  setting_sudoers.py  upgrade.py
bot_handlers/inline_query/: index.py
bot_handlers/message/: add_plugin.py  plugins.py  settings.py  start.py
bot_plugins/callback_query/: about_userlixo.py  any.py  help.py  setting_env.py  setting_language.py  setting_sudoers.py  settings.py
bot_plugins/inline_query/: any.py  index.py  ping.py
bot_plugins/message/: add_sudoer.py  any.py  settings.py  start.py
docs/: plugin-development-guide.md
handlers/message/: evals.py  execs.py  help.py  info.py  ping.py  plugins.py  upgrade.py
locales/: en-US.yml  eo-UY.yml  es-ES.yml  fr-FR.yml  pt-BR  pt-BR.yml
plugins/: about.py  backup.py  bing.py  cmd.py  dicio.py  dl.py  doc.py  emojimix.py  eval.py  exec.py  execs.py  fake.py  help.py  intags.py  kibe.py  notes.py  on.py  ping.py  print.py  prints.py  restart.py  roleta.py  save.py  sed.py  suco.py  tagall.py  text.py  tradutor.py  tts.py  upgrade.py  welcome.py  wiki.py  ytdl.py  ytdlv.py
plugins/bot/: bconfig.py  inline.py  start.py
plugins/message/: any.py  cmd.py  evals.py  execs.py  help.py  restart.py  settings.py  upgrade.py
plugins/user/: ai.py  backup.py  cmd.py  dicio.py  eval.py  execs.py  fake.py  kibe.py  mix.py  notes.py  start.py  tts.py  upgrade.py  wiki.py  youtube.py
plugns/: traduzir.py  youtube.py
strings/: en.yml  pt.yml  sync
userlixo/: __init__.py  __main__.py  config.py  login.py  utils.py
userlixo/abstract/: __init__.py
userlixo/assistant/controllers/: __init__.py
userlixo/common/: cmd.py  evals.py
userlixo/database/: __init__.py  database.py
userlixo/decorators/: __init__.py  bot_controller.py  bot_handler.py  controller.py  on_bot_handler.py  on_callback_query.py  on_inline_query.py  on_message.py  on_user_handler.py  post_load.py  pre_load.py  user_controller.py  user_handler.py
userlixo/handlers/abstract/: __init__.py  inline_query_handler.py
userlixo/handlers/assistant/: __init__.py
userlixo/handlers/bot/: about.py  add_plugin.py  help.py  list_commands.py  (+5 more)
userlixo/modules/: __init__.py
userlixo/strings/: __main__.py  en.yml  he.yml  pt.yml
userlixo/types/: __init__.py  client.py  handler_callable.py  plugin_element_collection.py  plugin_info.py  plugin_settings.py  settings_type.py  update_controller.py
userlixo/userbot/: __init__.py
userlixo/utils/: __init__.py  cache.py  misc.py  patches.py  plugins.py  startup.py  validation.py
(+496 files in other folders)
