[tool.poetry]
name = "userlixo"
version = "1.0.0"
description = "An Telegram userbot with many functions."
authors = ["AmanoTeam <contact@amanoteam.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AmanoTeam/UserLixo"
documentation = "https://github.com/AmanoTeam/UserLixo/blob/userlixo-czp/README.md"

keywords = ["chat", "telegram", "pyrogram", "telegram-bot", "selfbot"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Topic :: Internet",
    "Topic :: Communications",
    "Topic :: Communications :: Chat"
]

exclude = ["config.ini", "user.session*", "bot.session*", "userlixo/database/*.sqlite", "plugins-requirements.txt"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/AmanoTeam/UserLixo/issues"
"Community" = "https://t.me/UserLixoChat"

[tool.poetry.dependencies]
python = "^3.8"
tgcrypto = "1.2.5"
rich = "12.5.1"
langs = "0.1.1"
aiocron = "1.8"
click = "8.1.3"
PyYAML = "6.0"
tortoise-orm = "0.19"
meval = "2.5"
pyrogram = {git = "https://github.com/AmanoTeam/Pyrogram.git", tag = "v2.0.106+amn4"}

[tool.poetry.dev-dependencies]
black = "^22.6"
isort = "^5.10.1"
flake8 = "^5.0.3"

[tool.black]
exclude = '''
/(
    \.git
  | \.pytest_cache
  | \.vscode
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
