[project]
name = "userlixo"
version = "1.0.0"
description = "An Telegram userbot with many functions."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [{ name = "AmanoTeam", email = "contact@amanoteam.com" }]
dependencies = [
    "tgcrypto>=1.2.5",
    "rich>=13.6.0",
    "langs>=0.1.1",
    "aiocron>=1.8",
    "click>=8.1.7",
    "PyYAML>=6.0.1",
    "tortoise-orm>=0.20.0",
    "meval>=2.5",
    "psutil>=5.9.6",
    "kink>=0.7.0",
    "pyrogram @ git+https://github.com/AmanoTeam/Pyrogram.git@v2.0.106+amn7",
]

[tool.hatch.build]
exclude = [
    "config.ini",
    "user.session*",
    "bot.session*",
    "userlixo/database/*.sqlite",
    "plugins-requirements.txt",
]

[project.urls]
Repository = "https://github.com/AmanoTeam/UserLixo/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.1.0", "pre-commit>=3.5.0"]

[tool.ruff]
line-length = 99
src = ["userlixo"]
target-version = "py38"
select = [
    "I",    # isort
    "E",    # pycodestyle
    "W",    # pycodestyle
    "UP",   # pyupgrade
    "F",    # pyflakes
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
    "PERF", # perflint
    "N",    # pep8-naming
    "RUF",  # ruff
]
ignore = ["RUF001", "RUF002", "RUF003"]
preview = true

[tool.ruff.isort]
known-first-party = ["userlixo"]

[tool.hatch.metadata]
allow-direct-references = true
